comentarios para css

--- a/assets/css/perfil-medico.css
+++ b/assets/css/perfil-medico.css
@@ -1,3 +1,7 @@
+/**
+ * Arquivo para configuração de CSS de Custom Post Type
+ * do tipo "perfil_medico".
+ */
 .single-perfil_medico main .section {
   background-color: #4172a5;
 }
