--- a/assets/css/perfil-medico.css
+++ b/assets/css/perfil-medico.css
@@ -6,13 +6,13 @@
   background-color: #4172a5;
 }
 
-.single-perfil_medico main .section > .title {
+.single-perfil_medico main .section header .title {
   margin-bottom: 4rem;
   font-size: 2.3rem;
   text-transform: uppercase;
 }
 
-.single-perfil_medico main .section .title {
+.single-perfil_medico main .section header .title {
   color: white;
 }
 
