--- a/assets/css/perfil-medico.css
+++ b/assets/css/perfil-medico.css
@@ -2,6 +2,15 @@
  * Arquivo para configuração de CSS de Custom Post Type
  * do tipo "perfil_medico".
  */
+
+.slick-slide {
+	height: auto !important;
+}
+
+.slick-slide img {
+	border-radius: 100%;
+}
+
 .single-perfil_medico main .section {
   background-color: #4172a5;
 }
