icones de banner da home removidos temporariamente e link em conheça mais incluido

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ a.nav-item.is-tab.is-active {
 
 .home .hero
 .hero-body {
-  background-image: url('assets/images/banner-home.png');
+  background-image: url('assets/images/IDV_BANNER_SITE_1920P.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
