background com imagens de paginas alterados

--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -1,5 +1,5 @@
 #page-contato .hero-body {
-  background-image: url('../images/background-contato.png');
+  background-image: url('../images/contato_bg.jpg');
   background-size: cover;
   background-position: center center;
 }
