--- a/assets/css/page-missao.css
+++ b/assets/css/page-missao.css
@@ -1,5 +1,5 @@
 #page-missao .hero-body {
-	background: url('../images/background-missao.jpg') no-repeat;
+	background: url('../images/missao_bg.jpg') no-repeat;
 	background-size: cover;
 	background-position: center;
 }
