--- a/style.css
+++ b/style.css
@@ -57,6 +57,85 @@ html, body {
   font-family: 'Museo', sans-serif;
 }
 
+body {
+  overflow: hidden;
+  height: 100%;
+}
+
+.hero-content-header {
+  padding: .6rem;
+  background-color: #163963;
+  font-family: 'Museo', sans-serif;
+}
+
+.hero-content-header, .hero-content-header i {
+  color: white;
+}
+
+.hero-content-header i {
+  margin: 0 .5rem;
+}
+
+.hero-content-header .pipe-separator {
+  margin: 0 1rem;
+}
+
+.hero-content-header address {
+  display: inline-block;
+  font-style: normal;
+  margin: 0 .5rem;
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+
+.navbar {
+  min-height: 5.25rem;
+}
+
+.navbar .navbar-menu .navbar-end .navbar-item {
+  padding: .5rem;
+}
+
+.navbar .navbar-menu .navbar-end .navbar-item:last-child {
+  padding-right: .8rem;
+}
+
+.navbar .navbar-menu .navbar-end .navbar-item a {
+  padding: .5rem 0;
+  color: #1883AE;
+  text-transform: uppercase;
+  font-size: .8rem;
+}
+
+.navbar .navbar-menu .navbar-end .navbar-item a:hover {
+  padding-bottom: .5rem;
+  border-bottom: 2px solid #1883AE;
+  font-family: 'MuseoBolder', sans-serif;
+}
+
+.hero-content-body figure img {
+  flex: 1;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.hero-content-body .hero-side-menu {
+  position: absolute;
+  right: 0;
+}
+
+.hero-content-body .hero-side-menu .hero-menu-item {
+  background-color: white;
+  display: flex;
+  align-items: center;
+}
+
+.hero-content-body .hero-side-menu .hero-menu-item .hero-menu-content {
+  justify-content: center;
+  padding: 0 .5rem;
+  width: 100%;
+}
+
 .title span {
   font-weight: bolder;
 }
