--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ body {
 
 .hero-content-body .hero-side-menu .hero-menu-item .hero-menu-content {
   justify-content: center;
-  padding: 0 .5rem;
+  padding: 0 .5rem 0 2rem;
   width: 100%;
 }
 
