Novo menu aplicado em paginas atraves de componente

--- a/style.css
+++ b/style.css
@@ -152,8 +152,13 @@ body {
 
 .navbar .navbar-menu .navbar-end .navbar-item.navbar-item-active {
   font-family: 'MuseoBolder', sans-serif;
+}
+
+.navbar .navbar-menu .navbar-end .navbar-item.navbar-item-active a {
   border-bottom: 2px solid #1883AE;
 }
+
+
 
 .hero-content-body figure img {
   flex: 1;
