--- a/style.css
+++ b/style.css
@@ -149,13 +149,12 @@ body {
 }
 
 .navbar .navbar-menu .navbar-end .navbar-item a {
-  padding: .5rem 0;
   color: #1883AE;
   text-transform: uppercase;
   font-size: .8rem;
 }
 
-.navbar .navbar-menu .navbar-end .navbar-item a:hover {
+.navbar .navbar-menu .navbar-end > .navbar-item a:hover {
   padding-bottom: .5rem;
   border-bottom: 2px solid #1883AE;
   font-family: 'MuseoBolder', sans-serif;
@@ -165,7 +164,7 @@ body {
   font-family: 'MuseoBolder', sans-serif;
 }
 
-.navbar .navbar-menu .navbar-end .navbar-item.navbar-item-active a {
+.navbar .navbar-menu .navbar-end > .navbar-item.navbar-item-active a {
   border-bottom: 2px solid #1883AE;
 }
 
