--- a/assets/css/page-missao.css
+++ b/assets/css/page-missao.css
@@ -1,5 +1,5 @@
 #page-missao .hero-body {
-	background: url('../images/missao_bg.jpg') no-repeat;
+	background: url('../images/missao_bg.png') no-repeat;
 	background-size: cover;
 	background-position: center;
 }
@@ -9,18 +9,29 @@
 }
 
 #page-missao .hero-body .columns .column:not(.color-group) {
-	background-color: rgba(29, 105, 149, .9);
+	background-color: rgba(53,82,115,0.9);
 	padding: 3rem;
 	margin-bottom: 0;
 }
 
 
-#page-missao .hero-body .columns .column h1 {
+#page-missao .hero-body .columns .column h1,
+#page-missao .hero-body .columns .column h2 {
 	text-transform: uppercase;
 	font-family: 'MuseoLight', sans-serif;
 }
 
 #page-missao .hero-body .columns .column h1,
-#page-missao .hero-body .columns .column p {
+#page-missao .hero-body .columns .column h2,
+#page-missao .hero-body .columns .column p,
+#page-missao .hero-body .columns .column table tbody tr td ul li {
 	color: white;
+}
+
+#page-missao .hero-body .columns .column table tbody tr td ul {
+	margin-left: 0;
+}
+
+.content table tr:hover {
+	background-color: initial;
 }
